# cv

./: .gitignore  README.md  pyproject.toml
notebook/: overview.ipynb  sp.ipynb  xfeat.ipynb
sp/: README.md  compare.py  export_coreml.py  export_onnx.py  inference.py  pyproject.toml
sp/model/superpoint_lightglue.mlpackage/: Manifest.json
sp/model/superpoint_lightglue.mlpackage/Data/com.apple.CoreML/: model.mlmodel
sp/sp/: __init__.py  lightglue.py  superpoint.py
xfeat/: compare.py  export_coreml.py  export_onnx.py  inference.py  pyproject.toml
xfeat/model/: xfeat_lighterglue.onnx
xfeat/model/xfeat_lighterglue.mlpackage/: Manifest.json
xfeat/model/xfeat_lighterglue.mlpackage/Data/com.apple.CoreML/: model.mlmodel
xfeat/xfeat/: __init__.py  interpolator.py  lighterglue.py  model.py  xfeat.py
