[project]
name = "xfeat-lg"
version = "0.1.0"
description = "XFeat & LighterGlue"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "kornia>=0.7.4",
    "onnx>=1.17.0",
    "onnxscript>=0.1.0",
    "onnxruntime>=1.20.0",
    "onnxruntime-extensions>=0.13.0",
    "opencv-python>=4.10.0",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "tqdm>=4.67.0",
    "coremltools>=9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xfeat"]
